# auth

./: .gitignore  AGENTS.md  CLAUDE.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  infra.yml  release.yml
deploy/tencent/: .env.example  Caddyfile  docker-compose.yml  remote-deploy.sh
infra/: .gitignore  README.md  main.bicep  main.bicepparam  staticwebapp.config.json
infra/modules/: auth.bicep  common.bicep  containerApp.bicep  containerAppEnv.bicep  logAnalytics.bicep  staticWebApp.bicep  storage.bicep
infra/scripts/: bootstrap.sh
sources/dev/admin-dashboard/: package-lock.json  package.json  vite.config.ts
sources/dev/admin-dashboard/public/: staticwebapp.config.json
sources/dev/admin-dashboard/src/: App.tsx  main.tsx
sources/dev/admin-dashboard/src/api/: admin.ts  client.ts  types.ts
sources/dev/admin-dashboard/src/i18n/: index.ts
sources/dev/admin-dashboard/src/pages/: DashboardPage.tsx  LoginPage.tsx  NotFoundPage.tsx
sources/dev/admin-dashboard/src/router/: ProtectedRoute.tsx  index.tsx
sources/dev/admin-dashboard/src/store/: authStore.ts
sources/dev/authentication/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml
sources/dev/authentication-go/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
sources/dev/authentication-go/cmd/auth-service/: main.go  main_test.go
sources/dev/authentication/entity/: Cargo.toml
sources/dev/authentication/entity/src/: account.rs  app_provider.rs  application.rs  authorization_code.rs  lib.rs  refresh_token.rs  user.rs
sources/dev/authentication/migration/: Cargo.toml
sources/dev/authentication/migration/src/: lib.rs  m20260216_000001_create_applications.rs  m20260216_000002_create_app_providers.rs  m20260216_000003_create_users.rs  m20260216_000004_create_accounts.rs  m20260216_000005_create_authorization_codes.rs  m20260216_000006_create_refresh_tokens.rs  m20260218_000007_add_user_role_and_active.rs
sources/dev/authentication/sql/: schema.sql
sources/dev/authentication/src/: config.rs  error.rs  lib.rs  main.rs  rate_limit.rs  routes.rs  seed.rs
sources/dev/authentication/src/auth/: jwt.rs  middleware.rs  mod.rs  oauth2.rs  password.rs
sources/dev/authentication/src/auth/providers/: mod.rs  password.rs  test_provider.rs  wechat.rs
sources/dev/authentication/src/db/: azure_tables.rs  migration.rs  mod.rs  models.rs  pool.rs  repository.rs
sources/dev/authentication/src/db/queries/: accounts.rs  app_providers.rs  applications.rs  auth_codes.rs  mod.rs  refresh_tokens.rs  users.rs
sources/dev/authentication/src/handlers/: admin.rs  auth.rs  mod.rs  oauth2.rs  teams.rs  user.rs
sources/dev/authentication/tests/: admin_dashboard_test.rs  admin_teams_test.rs  admin_test.rs  auth_test.rs  invite_code_test.rs  membership_test.rs  oauth2_test.rs  seed_test.rs  teams_test.rs  user_test.rs
sources/dev/authentication/tests/common/: mod.rs
(+57 files in other folders)
